added functionality to the last 2 collections and made a different fourth collection
